metadata/force-app/main/default/objects/agf__PPM_Project__c/fields/DevOpsCenter_Project__c.field-meta.xml
<CustomField>
    <fullName>DevOpsCenter_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field on the corresponding DoC project</description>
    <label>DevOpsCenter Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>