metadata/force-app/main/default/objects/agf__PPM_Project__c/fields/Is_Development_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Development_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if it is a project that has to be sync with DoC project</description>
    <label>Is Development Project</label>
    <type>Checkbox</type>
</CustomField>